:wrench: fix btn-group on mobile devices

--- a/imports/ui/card/modal/errorReporting.scss
+++ b/imports/ui/card/modal/errorReporting.scss
@@ -25,3 +25,7 @@
     padding: 1em !important;
   }
 }
+
+#cardSidesGroup li.btn-bootstrap-container {
+  padding-bottom: 4px !important;
+}
